<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_Page">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="138dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/whatsapp_image_2020_08_15_at_13_31_09" />

    <TextView
        android:id="@+id/Head_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Head_title"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_red_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/under_head_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/under_head_title"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/login_btn_home"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:text="@string/login_btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/reg_btn_home"
        android:layout_width="93dp"
        android:layout_height="34dp"
        android:text="@string/reg_btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="141dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        app:srcCompat="@drawable/whatsapp_image_2020_08_15_at_13_31_57" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="141dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        app:srcCompat="@drawable/whatsapp_image_2020_08_15_at_13_31_58" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="131dp"
        android:layout_height="123dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445"
        app:srcCompat="@drawable/whatsapp_image_2020_08_15_at_13_31_59" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="238dp"
        android:layout_height="36dp"
        android:text="@string/more_details"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/btn_view_items"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:text="@string/btn_view_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.153" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="412dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/online_shop_coverimg" />

</androidx.constraintlayout.widget.ConstraintLayout>